--- a/HW4/problem2_python.ipynb
+++ b/HW4/problem2_python.ipynb
@@ -6,7 +6,7 @@
       "name": "problem2_python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbxumHf0G3VP+vfjByu4/0",
+      "authorship_tag": "ABX9TyMjw+HI+5dbciD41LnM3a+f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2821,7 +2821,7 @@
       "source": [
         "Are there any missing values? If so, impute as necessary and explain your approach.\n",
         "\n",
-        "*   Replaced missing values with mean.\n",
+        "*   There are no missing values in saturated_fat_per_gram variable.\n",
         "\n"
       ],
       "metadata": {
