--- a/HW5/Problem_2_Python.ipynb
+++ b/HW5/Problem_2_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem 2 Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM2mlkAC8cu0RmZhsVpZY0A",
+      "authorship_tag": "ABX9TyMMvL+RR+XIlunKfnXMaTT+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -282,7 +282,7 @@
         "id": "40Uq4_57rjqV",
         "outputId": "a33c73c0-98e5-4b4c-e4b4-9f8186d7013c"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
         "id": "IfHu-rggrqtG",
         "outputId": "31ca15b9-4bcf-43cb-f28e-921436cb5d5e"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,7 +515,7 @@
         "id": "gH6i_-jcrv_m",
         "outputId": "7f0aa006-a2e6-476e-e5d7-a63f8ecda949"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +745,7 @@
         "id": "-95iRzG-sf4f",
         "outputId": "22639194-2ad4-4f91-cda2-c060b770492c"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -900,7 +900,7 @@
         "id": "ehKzmMl8sBp0",
         "outputId": "522df3f1-8c64-4681-e797-ec9caa9c1f64"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1054,7 +1054,7 @@
         "id": "QZs-kFodtbMb",
         "outputId": "5fd203e3-c764-4038-83ef-97f1fbe6fb0f"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1238,7 +1238,7 @@
         "id": "sAIGJzdKvbRv",
         "outputId": "967862a2-2de7-482e-f427-41ecb64a002d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1448,7 +1448,7 @@
         "id": "MhDUCs6-vymp",
         "outputId": "62c638c5-f1a6-4264-b3eb-804dacc2cbae"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,7 +1527,7 @@
         "id": "bm9SzKpD1K4P",
         "outputId": "f3c456c0-aa6a-4d37-adf6-e73d85c234b8"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,7 +1586,7 @@
         "id": "j-GRPY1G5snv",
         "outputId": "9e75b5b7-8e2c-4041-ec02-bb14a4471539"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1667,7 +1667,7 @@
         "id": "SWKfNBQN53vJ",
         "outputId": "1556eee6-b6d8-45f8-fda5-23f0f7eac586"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1726,7 +1726,7 @@
         "id": "DViZSP_56P5g",
         "outputId": "bdcf0d6d-9133-4468-ee72-41f252933829"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1807,7 +1807,7 @@
         "id": "J3F9bZC66P95",
         "outputId": "9d3af197-b8e4-43f1-9fbb-6e694dedb482"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1866,7 +1866,7 @@
         "id": "ZKjimZ2861aB",
         "outputId": "8c6f7511-9fe4-4759-fc85-935c9a96aee9"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1945,7 +1945,7 @@
         "id": "R989GT2T61dW",
         "outputId": "142f9fa0-95c7-495d-8d26-e85e7d055e40"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2004,7 +2004,7 @@
         "id": "sFl2EufE7UBl",
         "outputId": "ba285397-aab0-4b2a-fc4e-f03c630efb8a"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,7 +2084,7 @@
         "id": "F3VmxmIG7T7U",
         "outputId": "27992048-737d-4050-9d22-1bfc3227f46d"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2149,7 +2149,7 @@
         "id": "6TUD6LEKv644",
         "outputId": "7e8dabf2-30ce-404b-844b-586b82584488"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2168,7 +2168,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the line graph below Naive Bayes accuracy is more for training ratio 50-50 and least for 70-30 and 60-40 ratios."
+        "From the line graph below Naive Bayes accuracy is more for training ratio 60-40 and least for 70-30."
       ],
       "metadata": {
         "id": "RPUbNDCg7L6i"
@@ -2190,7 +2190,7 @@
         "id": "tyvWIt0W4Ex2",
         "outputId": "30a8d9bf-fc6e-465e-81b1-49a4783d0551"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2237,7 +2237,7 @@
         "id": "ewnG9RD44bcW",
         "outputId": "81f3e983-db00-4278-cc3c-7c232bd53157"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2278,7 +2278,7 @@
         "id": "mzhszfwW5EUr",
         "outputId": "789333e7-322d-4a1e-fed5-8c871bb49de9"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
