--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMaP6e6AvXPPm3WGbBdifMp",
+      "authorship_tag": "ABX9TyOoQqO4LXkmmAvUq7Tz1B5w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1360,7 +1360,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and accuracy score for cart_classifier1 and c5_classifier1"
+        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier1 and c5_classifier1"
       ],
       "metadata": {
         "id": "Mgim10okFHsP"
@@ -1519,7 +1519,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and accuracy score for cart_classifier2 and c5_classifier2"
+        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier2 and c5_classifier2"
       ],
       "metadata": {
         "id": "ypM_9SHfFh9-"
@@ -1678,7 +1678,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and accuracy score for cart_classifier3 and c5_classifier3"
+        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier3 and c5_classifier3"
       ],
       "metadata": {
         "id": "eMIZ1k-RF20p"
@@ -1837,7 +1837,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# DisplayTree, DisplayCM and accuracy score for cart_classifier4 and c5_classifier4"
+        "# DisplayTree, DisplayCM and classification accuracy for cart_classifier4 and c5_classifier4"
       ],
       "metadata": {
         "id": "O8s5tHVl5UrF"
@@ -1996,11 +1996,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Summary:**\n",
-        "From the above 4 classification models:\n",
+        "## Summary:\n",
+        "\n",
+        "\n",
+        "> From the above 4 classification models:\n",
         "1.   All four models with different max_depth and max_leaf_node values have different accuarate values.\n",
         "2.   Increasing the max_depth and max_leaf_node values increases the accuracy.\n",
-        "3.   For every model cart_classifier(Gini Index) accuracy is more compared to c5_classifier(Entropy) accuracy.\n"
+        "3.   For every model cart_classifier(Gini Index) accuracy is more compared to c5_classifier(Entropy) accuracy.\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "HRUhuTEv5dsr"
