--- a/HW6/Problem1Python.ipynb
+++ b/HW6/Problem1Python.ipynb
@@ -6,7 +6,7 @@
       "name": "Problem1Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoQqO4LXkmmAvUq7Tz1B5w",
+      "authorship_tag": "ABX9TyNJysss6OIEDe4HuotRBcuG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Rzff-AqwblWs"
       },
@@ -75,9 +75,9 @@
           "height": 423
         },
         "id": "9nDmm_79tWLe",
-        "outputId": "f6ced4e7-2321-4170-d0bb-cbdc922e7aae"
+        "outputId": "39a45cdd-173d-4434-e209-d2d58d549369"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-315b537d-2c6d-4fdb-9c9f-8b1914f0cf71\">\n",
+              "  <div id=\"df-b77a8f6c-5801-4896-aa10-b33a1783c592\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -281,7 +281,7 @@
               "</table>\n",
               "<p>14797 rows × 9 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-315b537d-2c6d-4fdb-9c9f-8b1914f0cf71')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b77a8f6c-5801-4896-aa10-b33a1783c592')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -332,12 +332,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-315b537d-2c6d-4fdb-9c9f-8b1914f0cf71 button.colab-df-convert');\n",
+              "          document.querySelector('#df-b77a8f6c-5801-4896-aa10-b33a1783c592 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-315b537d-2c6d-4fdb-9c9f-8b1914f0cf71');\n",
+              "          const element = document.querySelector('#df-b77a8f6c-5801-4896-aa10-b33a1783c592');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -360,7 +360,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 2
         }
       ]
     },
@@ -377,9 +377,9 @@
           "height": 206
         },
         "id": "wI3PCsQHtZmd",
-        "outputId": "5c73bd7d-f3aa-4f3d-cc98-e108870a999a"
+        "outputId": "ab444c9c-f0a3-4173-e8b1-eeda7ed8cb8b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bc96f9a6-0028-400a-a9bc-315d0a44d97d\">\n",
+              "  <div id=\"df-84027c9a-ef3d-47a9-881d-89cf485ab1a6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -496,7 +496,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bc96f9a6-0028-400a-a9bc-315d0a44d97d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-84027c9a-ef3d-47a9-881d-89cf485ab1a6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -547,12 +547,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-bc96f9a6-0028-400a-a9bc-315d0a44d97d button.colab-df-convert');\n",
+              "          document.querySelector('#df-84027c9a-ef3d-47a9-881d-89cf485ab1a6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-bc96f9a6-0028-400a-a9bc-315d0a44d97d');\n",
+              "          const element = document.querySelector('#df-84027c9a-ef3d-47a9-881d-89cf485ab1a6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -575,7 +575,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 3
         }
       ]
     },
@@ -613,9 +613,9 @@
           "height": 363
         },
         "id": "W3MrBg_Xtd8m",
-        "outputId": "a4fa88f6-6518-4b8c-911b-5599e9e75d45"
+        "outputId": "415e8b75-4858-49f2-9150-9d46459fd921"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -635,7 +635,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fe96fb3a-8808-4357-adac-62fd9e0eca83\">\n",
+              "  <div id=\"df-947a14c6-1aa1-440b-a4f6-87d5f63107eb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -724,7 +724,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe96fb3a-8808-4357-adac-62fd9e0eca83')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-947a14c6-1aa1-440b-a4f6-87d5f63107eb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -775,12 +775,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fe96fb3a-8808-4357-adac-62fd9e0eca83 button.colab-df-convert');\n",
+              "          document.querySelector('#df-947a14c6-1aa1-440b-a4f6-87d5f63107eb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fe96fb3a-8808-4357-adac-62fd9e0eca83');\n",
+              "          const element = document.querySelector('#df-947a14c6-1aa1-440b-a4f6-87d5f63107eb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -803,7 +803,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 4
         }
       ]
     },
@@ -826,9 +826,9 @@
           "height": 279
         },
         "id": "kstekbactjGQ",
-        "outputId": "44c0c591-dd29-4375-8906-bbfb8e5cd5cf"
+        "outputId": "e7e4f096-584c-4d1c-c94a-e4bf79bc9b09"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -870,9 +870,9 @@
           "height": 363
         },
         "id": "IWYeOvx7tlTZ",
-        "outputId": "97d52db0-bd84-4604-c28a-d238d0c8b033"
+        "outputId": "4a36e5ab-f1d9-4506-b48d-604f5af221e1"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +892,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c0dcc6d5-443f-4b68-af63-6ae26bdf5519\">\n",
+              "  <div id=\"df-7808fa39-09cb-4588-84a8-3d2a5a0f4f54\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -981,7 +981,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c0dcc6d5-443f-4b68-af63-6ae26bdf5519')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7808fa39-09cb-4588-84a8-3d2a5a0f4f54')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1032,12 +1032,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c0dcc6d5-443f-4b68-af63-6ae26bdf5519 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7808fa39-09cb-4588-84a8-3d2a5a0f4f54 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c0dcc6d5-443f-4b68-af63-6ae26bdf5519');\n",
+              "          const element = document.querySelector('#df-7808fa39-09cb-4588-84a8-3d2a5a0f4f54');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1060,7 +1060,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 6
         }
       ]
     },
@@ -1090,7 +1090,7 @@
       "metadata": {
         "id": "PeQCNnI-tt6t"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1104,9 +1104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O2Qm2IWs-NX_",
-        "outputId": "5f3180b8-8750-492f-9465-c1f6e981d18b"
+        "outputId": "2b62643e-681d-441a-87a9-8ab999b5f547"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1138,9 +1138,9 @@
           "height": 336
         },
         "id": "JQYk_DdXtyKT",
-        "outputId": "e9698c70-51f4-4905-a33c-ace03ca38a70"
+        "outputId": "5cd5577e-655d-4ad8-fb90-66afb0af3015"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "iRQFC1jNt05D"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1187,7 +1187,7 @@
       "metadata": {
         "id": "6DbPnm1nA9HU"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1211,7 +1211,7 @@
       "metadata": {
         "id": "afNJ_CVW5OfB"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1235,7 +1235,7 @@
       "metadata": {
         "id": "67pcdVZB5Qm7"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1264,7 +1264,7 @@
       "metadata": {
         "id": "_VgbPq0O5Sp6"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1320,13 +1320,13 @@
       "metadata": {
         "id": "ZvK3UteSBu5z"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Analyze the effect of the parameters max_depth and max_leaf_nodes on classification accuracy. Plot the obtained accuracy values for various choices of max_depth (e.g. 2, 3, 4, none) and max_leaf_nodes (3, 4, 5, none).\n"
+        "# Analyze the effect of the parameters max_depth and max_leaf_nodes on classification accuracy. Plot the obtained accuracy values for various choices of max_depth (e.g. 2, 3, 4, none) and max_leaf_nodes (3, 4, 5, none).\n"
       ],
       "metadata": {
         "id": "ei2RU9BHE-F4"
@@ -1354,7 +1354,7 @@
       "metadata": {
         "id": "70-BD6ffE_-_"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1388,9 +1388,9 @@
           "height": 532
         },
         "id": "b05yia_SFNuK",
-        "outputId": "42d46209-9fd4-4527-d110-8504f655f431"
+        "outputId": "3dac5664-abc6-4cf8-c632-afe0f1692326"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1429,9 +1429,9 @@
           "height": 641
         },
         "id": "6z4XQ5r_FTYr",
-        "outputId": "ff30cebd-b5d0-4a6e-8f30-31a6905f7e15"
+        "outputId": "de342326-c6b2-4999-c4b0-7873128e5066"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1453,7 +1453,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -1481,9 +1481,9 @@
           "height": 316
         },
         "id": "4mZvFwLXFYyh",
-        "outputId": "d5b883f9-ca9f-4672-8dca-e115fc36d332"
+        "outputId": "26cc7a1a-03f2-4298-b90c-d634d3089c30"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1547,9 +1547,9 @@
           "height": 532
         },
         "id": "p3ruO1FXFm3R",
-        "outputId": "13f3d789-5ab7-40a7-906b-1910c36fd673"
+        "outputId": "bacc2ab5-c8be-40c9-f203-3b4e47cce9e7"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1588,9 +1588,9 @@
           "height": 641
         },
         "id": "z14ypfZuFqyW",
-        "outputId": "0a261d96-83c3-4265-c568-ecc254bb0e3a"
+        "outputId": "b4ebaeee-361b-45c9-e989-c178c24dba33"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1612,7 +1612,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -1640,9 +1640,9 @@
           "height": 316
         },
         "id": "UhaMzimRFvMp",
-        "outputId": "b20c2c32-5f6f-4486-8b5d-b001238d23de"
+        "outputId": "3fda4699-a40f-4d1e-8f70-5222f89ab7ee"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1706,9 +1706,9 @@
           "height": 532
         },
         "id": "-1mY7MguF7h-",
-        "outputId": "8284f917-4ab1-4365-da67-fe8c558cbf5d"
+        "outputId": "0de01a95-d11a-4415-8d60-0927619ef871"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1747,9 +1747,9 @@
           "height": 641
         },
         "id": "TeUriORUF_jA",
-        "outputId": "7444258c-ec65-4add-f99e-9a44cc077dd8"
+        "outputId": "40ae7423-e735-4493-b856-b0ed7f7451b8"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1771,7 +1771,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 24
         },
         {
           "output_type": "display_data",
@@ -1799,9 +1799,9 @@
           "height": 316
         },
         "id": "GEMrLfa7GDeT",
-        "outputId": "468f646f-6bc8-4cda-fe73-06b980ce388c"
+        "outputId": "32e8de2d-7b6e-4d2f-fcbc-ba6fb320aee2"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1865,9 +1865,9 @@
           "height": 532
         },
         "id": "5zrTNJPQ5Wmx",
-        "outputId": "221cc9d1-4013-4c45-a2e3-d145a12a4bd6"
+        "outputId": "2600db6c-08bc-4e0c-d034-917931f7a4b5"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1906,9 +1906,9 @@
           "height": 641
         },
         "id": "Ha9inu6r5Yf4",
-        "outputId": "50cfbeca-73d9-4e8a-f260-c00bec2f3318"
+        "outputId": "8a9dd920-1b68-4819-8252-5ff654436c82"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1930,7 +1930,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -1958,9 +1958,9 @@
           "height": 316
         },
         "id": "ZZs1-sDL5a8Y",
-        "outputId": "a3557031-8f4e-4b10-ff99-d94d52c24ea3"
+        "outputId": "1089bc60-df8b-4ce9-951d-687b19b85ad0"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2001,7 +2001,7 @@
         "\n",
         "> From the above 4 classification models:\n",
         "1.   All four models with different max_depth and max_leaf_node values have different accuarate values.\n",
-        "2.   Increasing the max_depth and max_leaf_node values increases the accuracy.\n",
+        "2.   Increasing the max_depth and max_leaf_node values increases the accuracy of cart_classifier but not the accuracy of c5_classifier.\n",
         "3.   For every model cart_classifier(Gini Index) accuracy is more compared to c5_classifier(Entropy) accuracy.\n",
         "\n",
         "\n",
